# my-oneapi-workspace

./: .gitignore  CMakeLists.txt
e00-onemkl-gemm/: CMakeLists.txt  main.cpp
